drupal_couchdb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: drupal
  namespace: vulnapps-dev
spec:
  type: NodePort
  selector:
    app: drupal
  ports:
  - name: drupal
    port: 8080
    targetPort: 80
    nodePort: 30007
---
apiVersion: v1
kind: Service
metadata:
  name: couchdb
  namespace: vulnapps-prd
spec:
  type: ClusterIP
  selector:
    app: couchdb
  ports:
  - name: couchdb
    port: 5984
    targetPort: 5984
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: couchdb-deployment
  namespace: vulnapps-prd
spec:
  selector:
    matchLabels:
      app: couchdb
  replicas: 1
  template:
    metadata:
      labels:
        app: couchdb
    spec:
      containers:
      - name: couchdb
        image: harbor-01a.livefire.solutions/vulnerableapps/couchdb:2.1.0
        ports:
        - containerPort: 5984
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drupal-deployment
  namespace: vulnapps-dev
spec:
  selector:
    matchLabels:
      app: drupal
  replicas: 1
  template:
    metadata:
      labels:
        app: drupal
    spec:
      containers:
      - name: drupal
        image: harbor-01a.livefire.solutions/vulnerableapps/drupal:8.5.0
        ports:
        - containerPort: 80
      affinity:
        podAntiAffinity:
              requiredDuringSchedulingIgnoredDuringExecution:
                - namespaces:
                  - vulnapps-dev
                  - vulnapps-prd
                  labelSelector:
                    matchExpressions:
                    - key: app
                      operator: In
                      values:
                      - couchdb
                  topologyKey: "kubernetes.io/hostname"
