dvwa.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dvwa
spec:
  type: NodePort
  selector:
    app: dvwa
  ports:
  - name: dvwa
    port: 80
    targetPort: 80
    nodePort: 30008
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dvwa-deployment
spec:
  selector:
    matchLabels:
      app: dvwa
  replicas: 1
  template:
    metadata:
      labels:
        app: dvwa
    spec:
      containers:
      - name: dvwa
        image: harbor-01a.livefire.solutions/vulnerableapps/web-dvwa:latest
        ports:
        - containerPort: 80
